--- a/.github/workflows/book.yaml
+++ b/.github/workflows/book.yaml
@@ -53,7 +53,9 @@ jobs:
           python-version: 3.9
 
       - name: Install deps
-        run: pip3 install -r requirements.txt
+        run: |
+          pip3 install -r requirements.txt
+          sudo apt-get install ttf-mscorefonts-installer
 
       - name: Dowloaded sources
         uses: actions/download-artifact@v2
@@ -61,7 +63,7 @@ jobs:
           name: sources
 
       - name: Build templates
-        run:
+        run: |
           export book_version=${{ steps.get-latest-tag.outputs.tag }}
           export python_version=$(python3 -V)
           export os_version=$(uname -a)
@@ -69,15 +71,15 @@ jobs:
 
       - name: Get all .mds
         id: files_list
-        run: echo "::set-output name=files::$(printf '"%s" ' titlpage.md chapters/**/*.md)"
+        run: echo "::set-output name=files::$(printf '"%s" ' titlepage.md $(find chapters -name '*.md' | sort))"
 
-      - name: Build .pdf
-        uses: docker://pandoc/alpine-latex:2.14
+      - name: Build .docx
+        uses: docker://pandoc/ubuntu-latex:2.14
         with:
           args: --pdf-engine=xelatex -V mainfont='Arial' --output=python-book.docx ${{ steps.files_list.outputs.files }}
             
-      - name: Build .docx
-        uses: docker://pandoc/alpine-latex:2.14
+      - name: Build .pdf
+        uses: docker://pandoc/ubuntu-latex:2.14
         with:
           args: --pdf-engine=xelatex -V mainfont='Arial' --output=python-book.pdf ${{ steps.files_list.outputs.files }}
 
