Update pandoc args

--- a/.github/workflows/book.yaml
+++ b/.github/workflows/book.yaml
@@ -77,10 +77,10 @@ jobs:
         run: echo "::set-output name=files::$(printf '"%s" ' titlepage.md $(find chapters -name '*.md' | sort))"
 
       - name: Build .docx
-        run: pandoc --pdf-engine=xelatex -V --output=python-book.docx ${{ steps.files_list.outputs.files }}
+        run: pandoc --pdf-engine=xelatex -o python-book.docx ${{ steps.files_list.outputs.files }}
             
       - name: Build .pdf
-        run: pandoc --pdf-engine=xelatex -V --output=python-book.pdf ${{ steps.files_list.outputs.files }}
+        run: pandoc --pdf-engine=xelatex -o python-book.pdf ${{ steps.files_list.outputs.files }}
 
       - name: Create release
         uses: "marvinpinto/action-automatic-releases@latest"
