--- a/.github/workflows/book.yaml
+++ b/.github/workflows/book.yaml
@@ -56,9 +56,8 @@ jobs:
         run: |
           pip3 install -r requirements.txt
           sudo apt-get update
-          sudo apt-get install ttf-mscorefonts-installer
           sudo apt-get install pandoc
-          sudo apt-get install texlive-xetex
+          sudo apt-get install texlive texlive-lang-all texlive-fonts-extra
 
       - name: Dowloaded sources
         uses: actions/download-artifact@v2
@@ -77,10 +76,10 @@ jobs:
         run: echo "::set-output name=files::$(printf '"%s" ' titlepage.md $(find chapters -name '*.md' | sort))"
 
       - name: Build .docx
-        run: pandoc --pdf-engine=xelatex -o python-book.docx ${{ steps.files_list.outputs.files }}
+        run: pandoc -o python-book.docx ${{ steps.files_list.outputs.files }}
             
       - name: Build .pdf
-        run: pandoc --pdf-engine=xelatex -V mainfont='Times New Roman' -o python-book.pdf ${{ steps.files_list.outputs.files }}
+        run: pandoc -o python-book.pdf ${{ steps.files_list.outputs.files }}
 
       - name: Create release
         uses: "marvinpinto/action-automatic-releases@latest"
