--- a/.github/workflows/book.yaml
+++ b/.github/workflows/book.yaml
@@ -55,7 +55,7 @@ jobs:
       - name: Install deps
         run: pip3 install -r requirements.txt
 
-      - name: Dowloaded sources
+      - name: Dowload sources
         uses: actions/download-artifact@v2
         with:
           name: sources
